--- a/package.json
+++ b/package.json
@@ -2,33 +2,30 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aneagoie.github.io/robofriends-pwa",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "fetch-mock": "^6.3.0",
+    "gh-pages": "^1.1.0",
+    "nock": "^9.2.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.0.17",
+    "react-test-renderer": "^16.2.0",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2",
-    "sw-precache": "^5.2.1",
-    "tachyons": "^4.12.0"
+    "redux-mock-store": "^1.5.1",
+    "redux-thunk": "^2.2.0",
+    "tachyons": "^4.9.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && cp manifest.json build/ && sw-precache --root='build/' --static-file-globs='build/**/!(*map*)'",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
